added basic info

--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -23,6 +23,13 @@
         font-size: 1.5rem;
       }
     }
+    .img-fluid {
+      height: 184px;
+    }
+    .item-label {
+      margin-top: 10px;
+      font-weight: bold;
+    }
   }
 }
 
