--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -10740,6 +10740,8 @@ a.text-dark:hover, a.text-dark:focus {
 
 .masthead .masthead-avatar {
   width: 15rem;
+  border-radius: 100%;
+  height: 15rem;
 }
 
 @media (min-width: 992px) {
@@ -10786,6 +10788,15 @@ a.text-dark:hover, a.text-dark:focus {
 
 .portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
   font-size: 1.5rem;
+}
+
+.portfolio .portfolio-item .img-fluid {
+  height: 184px;
+}
+
+.portfolio .portfolio-item .item-label {
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .portfolio-modal .portfolio-modal-title {
